snapshots/care/data4life/hc-result-sdk-kmp/error/0.2.0-SNAPSHOT/error-0.2.0-20210920.105033-2-all.jar.md5
3af9a9f0d183099f542172e386c7fcc8